--- a/tugas 2 html with css.html
+++ b/tugas 2 html with css.html
@@ -7,7 +7,7 @@
 </head>
 <style>
     table, th, td {
-        border: 1px solid black;
+        border: 1px solid white;
     }
     body{
         background-image: url('space p.gif');
@@ -34,7 +34,7 @@
 <center>
 <a href="https://repository.unpak.ac.id/tukangna/repo/file/files-20181227070329.pdf">TEORI BUMI DATAR</a>
 </center>
-<div style="color: white;">
+<div class= tengah style="color: white;">
 <h2>Pembahasan</h2>
 
 <p>Berikut poin pembahasan bumi datar :</p>
@@ -46,7 +46,7 @@
     <p>Ontologi merupakan salah satu diantara lapangan penyelidikan filsaafat yang paling kuno. Menurut Feibleman dalam Bakhtiar (2010) kata Ontologi berasal dari Yunani: On = being, dan logos = logic. Jadi ontologi adalah The Theory of being qua being (Teori tentang keberadaan sebagai keberadaan). Sedangkan Gie dalam Rahmat (2011) mengatakan bahwa ontologi merupakan bagian dari filsafat dasar yang mengungkap makna dari sebuah eksistensi yang pembahasannya meliputi persoalan-persoalan: 1) Apakah artinya ada, hal yang ada; 2) Apakah golongan dari hal yang ada; 3) apakah sifat dasar kenyataan dan hal ada; 4) Apakah cara-cara yang berbeda dalam mana entitas dari kategorikategori logis berlainan (misalkan objek-objek fisis, pengertian universal, abstraksi dan bilangan) dapat dikatakan ada.  Salah satu teori yang sekarang ini hangat menjadi perdebatan publik dan masih disangsikan sebagai sebuah realita adalah “Teori Bumi Datar”. Sebuah organisasi yang memiliki keyakinan bahwa bumi berbentuk datar, bertentangan dengan fakta-fakta ilmiah yang menunjukkan bahwa bumi itu bulat yaitu Flat Earth Society . Organisasi modernnya didirikan oleh seorang pria asal Inggris, Samuel Shenton pada 1956 dan kemudian dipimpin oleh Charles K. Johnson, yang menjadikan rumahnya di Lancaster, California, sebagai basis organisasi.  </p>
 </ol>
 </div>
-
+<div class="tabel" style="color: white;">
 <table style="width: 150;">
     <tr>
       <th>NAMA</th>
@@ -59,6 +59,7 @@
        <td>Pemrograman Platfrom</td>
     </tr>
    </table>
-<body>
+</div>
+   <body>
     
 </html>
